2008-05-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c:
   Add new GeanyFunctions API.
   Avoid crashes when LANG environment variable can't be read
   (e.g. on Windows).
   Detect the Aspell installation prefix on Windows and use it to find
   installed dictionaries.
 * makefile.win32:
   Make Windows Makefile working.
 * configure.in:
   Explicitly depend on Geany >= 0.15.


2008-05-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in:
   Post-release version bump.
   Display install location of the plugin binary and separately the
   location of other files like translations for clarity.
 * src/spellcheck.c:
   Fix a big memory leak and don't use an unneeded array.
   Fix possible crashes on Windows when working on unsaved documents
   (patch by Nick, thanks :)).


2008-05-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * po/*, src/*, *:
   Initial import of spellcheck plugin.
 * Makefile.am:
   Add missing dist-bzip2 and sign targets.
 * Initial 0.1 release of the spellcheck plugin.
