@@ -1,3 +1,11 @@
+2008-06-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/spellcheck.c:
+   Compilation fixes.
+ * Makefile.am:
+   Add html target.
+
+
 2008-05-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/spellcheck.c:
